# debigbos

./: .gitignore  LICENSE  README.md  debigbos.json  github-info.txt  install.ps1  install.sh  pyproject.toml  test_fixes.py  thebigbos.json
.bigbos/skills/django-gateway-architecture/: SKILL.md
.bigbos/skills/hermes-efficiency/: SKILL.md
.bigbos/skills/hermes-ollama/: SKILL.md
.bigbos/skills/hermes-webui-maintenance/: SKILL.md
.bigbos/skills/proxied-iframe-loading/: SKILL.md
.bigbos/skills/react-axios-token-refresh/: SKILL.md
.bigbos/skills/systematic-debugging/: SKILL.md
.debigbos/: memory.db
debigbos/: __init__.py  __main__.py  main.py
debigbos/config/: __init__.py  auth.py  manager.py
debigbos/core/: agent.py  api_logger.py  memory.py  models_dev.py  skills.py  soul.py  updater.py
debigbos/models/: __init__.py  ollama_provider.py  opencode_provider.py  provider.py
debigbos/tools/: bash_tool.py  git_utils.py  registry.py  web_tool.py
debigbos/tui/: __init__.py  app.py  dialogs.py  plugin.py  styles.tcss  theme.py
thebigbos/: __init__.py  main.py
thebigbos/config/: __init__.py  auth.py  manager.py
thebigbos/core/: __init__.py  agent.py  api_logger.py  memory.py  models_dev.py  session.py  skills.py  soul.py  updater.py
thebigbos/models/: anthropic_provider.py  ollama_provider.py  openai_provider.py  opencode_provider.py  provider.py  registry.py
thebigbos/tools/: __init__.py  file_tools.py  git_utils.py  registry.py  todo_tool.py  web_tool.py
thebigbos/tui/: __init__.py  app.py  dialogs.py  keymap.py  routes.py  slots.py  theme.py
(+65 files in other folders)
