[project]
name = "thebigbos"
version = "0.1.0"
description = "AI-powered CLI assistant with persistent memory, soul, skills, and multi-model support"
authors = [{ name = "TheBigBos Team" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "textual>=0.50.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
    "pillow>=10.0.0",
    "markdown-it-py>=3.0.0",
]

[project.scripts]
thebigbos = "thebigbos.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
